fix bleed through issue and make minor styling changes

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ html {
 .container {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(rgba(31, 7, 7, 0.7), rgba(0, 0, 0, 0.7)),
-    url(images/bg.png) center no-repeat;
+  background: linear-gradient(rgba(231, 231, 231, 0.7), rgba(0, 0, 0, 0.7)),
+    url(images/bg2.jpg) center no-repeat;
   background-size: cover;
   perspective: 100rem;
 }
@@ -36,7 +36,7 @@ html {
 .forms-wrapper form {
   width: 50rem;
   height: 35rem;
-  background-color: rgba(40, 114, 108, 0.925);
+  background-color: rgba(20, 114, 108, 100);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
